--- a/app/src/main/res/layout-land/activity_detalle.xml
+++ b/app/src/main/res/layout-land/activity_detalle.xml
@@ -10,44 +10,43 @@
         android:id="@+id/tvTitulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.10"
-        android:allowUndo="false"
+        android:layout_weight="0.33"
         android:text="Titulo"
         android:textAlignment="center"
-        android:textAllCaps="false"
         android:textColor="@android:color/background_dark"
-        android:textSize="30sp"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/imgvEstadio"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_weight="0.66"
+        android:layout_width="350dp"
+        android:layout_height="175dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/tvTitulo"
+        android:layout_weight="0.85"
         android:adjustViewBounds="false"
-        app:srcCompat="@mipmap/estadioblazers"
-        android:layout_marginBottom="41dp"
-        android:layout_above="@+id/tvDetalle"
-        android:layout_alignParentStart="true" />
+        app:srcCompat="@mipmap/estadioblazers" />
 
     <TextView
         android:id="@+id/tvDetalle"
         android:layout_width="match_parent"
-        android:layout_height="135dp"
-        android:layout_above="@+id/btnInfo"
-        android:layout_alignParentStart="true"
-        android:layout_weight="0.15"
+        android:layout_height="75dp"
+        android:layout_weight="0.07"
         android:text="TextView"
         android:textColor="@android:color/background_dark"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/imgvEstadio" />
 
     <Button
         android:id="@+id/btnInfo"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_weight="0.09"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/tvTitulo"
+        android:layout_marginEnd="48dp"
+        android:layout_marginTop="71dp"
         android:background="@android:color/holo_blue_bright"
         android:onClick="paginaweb"
         android:text="Más Información"
