--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,6 +10,18 @@
     <ListView
         android:id="@+id/lvEquipos"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="456dp"
         android:dividerHeight="10dp" />
-</LinearLayout>
+
+    <Button
+        android:id="@+id/btnClasificaciones"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:background="?android:attr/colorAccent"
+        android:onClick="clasificaciones"
+        android:text="Clasificaciones 2016/2017"
+        android:textColor="@android:color/background_dark" />
+</RelativeLayout>
