--- a/app/src/main/res/layout-land/activity_clasificacion.xml
+++ b/app/src/main/res/layout-land/activity_clasificacion.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:text="Clasificación liga regular 2016/2017"
+        android:text="@string/lblRegular"
         android:textAlignment="center"
         android:textColor="@android:color/background_dark"
         android:textSize="18sp"
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:text="Resultado Playoffs 2017"
+        android:text="@string/lblPlayoffs"
         android:textAlignment="center"
         android:textColor="@android:color/background_dark"
         android:textSize="18sp" />
