--- a/app/src/main/res/layout-land/activity_detalle.xml
+++ b/app/src/main/res/layout-land/activity_detalle.xml
@@ -43,12 +43,12 @@
         android:id="@+id/btnInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/tvDetalle"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/tvTitulo"
-        android:layout_marginEnd="48dp"
-        android:layout_marginTop="71dp"
-        android:background="@android:color/holo_blue_bright"
+        android:layout_marginBottom="55dp"
+        android:layout_marginEnd="41dp"
+        android:background="@android:color/holo_green_light"
         android:onClick="paginaweb"
-        android:text="Más Información"
+        android:text="@string/btnInfo"
         android:textColor="@android:color/background_dark" />
 </RelativeLayout>
