--- a/app/src/main/res/layout/activity_clasificacion.xml
+++ b/app/src/main/res/layout/activity_clasificacion.xml
@@ -21,8 +21,9 @@
         android:id="@+id/tvLiga"
         android:layout_width="500dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:text="Clasificación liga regular 2016/2017"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="@string/lblRegular"
         android:textAlignment="center"
         android:textColor="@android:color/background_dark"
         android:textSize="18sp"
@@ -37,7 +38,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/imgLiga"
         android:layout_marginTop="31dp"
-        android:text="Resultado Playoffs 2017"
+        android:text="@string/lblPlayoffs"
         android:textAlignment="center"
         android:textColor="@android:color/background_dark"
         android:textSize="18sp" />
