--- a/app/src/main/res/layout/activity_detalle.xml
+++ b/app/src/main/res/layout/activity_detalle.xml
@@ -48,8 +48,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_weight="0.09"
-        android:background="@android:color/holo_blue_bright"
+        android:background="@android:color/holo_green_light"
         android:onClick="paginaweb"
-        android:text="Más Información"
+        android:text="@string/btnInfo"
         android:textColor="@android:color/background_dark" />
 </RelativeLayout>
