--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,6 @@
         android:layout_alignParentStart="true"
         android:background="?android:attr/colorAccent"
         android:onClick="clasificaciones"
-        android:text="Clasificaciones 2016/2017"
+        android:text="@string/btnClasificaciones"
         android:textColor="@android:color/background_dark" />
 </RelativeLayout>
